# super-duper-fiesta

./: .gitignore  LICENSE  README.md  nuflux.py  setup.cfg
data/: atm_flux.json  atm_flux.txt  by_vs_E.json  by_vs_e.pkl  neutrino.root  nu_xs.txt  nu_xs_12.json  nu_xs_12.txt  nue_cc_bye.pkl  nue_nc_bye.pkl  numu_cc_bye.pkl  numu_nc_bye.pkl  parameters.json  result.json
fiesta/fiesta/: nuBy.py  nuFlux.py  nuXs.py  table.py  tools.py
notebooks/: CrossSection.ipynb  Fluxes.ipynb  Results.ipynb  Untitled.ipynb  by.ipynb
report/: report.tex
scripts/: calculateProbability.py  createByEhistograms.py  createjsontable.py  docpt.py  extractGSeaGenData.py  f.py~  fitAtmFlux.py  fitAtmosphericFlux.py~  fitByvsEnergy.py  fitXs.py  plotAtmFlux.py  plotByHistograms.py  plotByvsEfit.py  plotXs.py  printflux.py  printjsontable.py  printproba.py  printxs.py  test.py  test.py~
