[metadata]
name = fiesta
version = 0.0.1
author = Rodrigo G. Ruiz	
author_email = rgracia@km3net.de
description = Analysis package to do simple phenomenology studies related to neutrino telescopes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rodrigruiz/super-duper-fiesta.git
project_urls =
    Bug Tracker = https://github.com/rodrigruiz/super-duper-fiesta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = fiesta
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    scipy
    docopt
    km3io
[options.packages.find]
where = fiesta